# fractak

./: CMakeLists.txt
includes/: fractal.h
libft/includes/: libft.h
libft/srcs/ft_str/: ft_strjoin_free.c  ft_strnew.c
srcs/: camera.c  main.c  mandebort.c  mandebort1.c  over.c
